# waterpolo-intelligence

./: .gitignore  DESIGN.md  README.md  SCRAPING.md
apps/api/: .env.example  Dockerfile  endpoints.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20240920_0001_init.py
apps/api/app/: auth.py  config.py  crud.py  database.py  importer.py  main.py  scheduler.py  schemas.py
apps/api/app/routers/: admin.py  compare.py  health.py  matches.py  meta.py  players.py  teams.py
apps/api/config/: endpoints.json
apps/web/: .env.local  Dockerfile  package.json  tailwind.config.ts
apps/web/.next/: _events.json  trace
apps/web/.next/cache/: config.json
apps/web/.next/dev/: _events_18.json  prerender-manifest.json  trace
apps/web/.next/dev/cache/: config.json
apps/web/.next/dev/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json
apps/web/.next/server/: server-reference-manifest.js  server-reference-manifest.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/compare/: page.tsx
apps/web/app/matches/: page.tsx
apps/web/app/players/: page.tsx
apps/web/app/simulate/: page.tsx
apps/web/app/teams/: page.tsx
apps/web/components/: Charts.tsx  EmptyStateCard.tsx  FilterProvider.tsx  FormDots.tsx  FreshnessPill.tsx  KpiCard.tsx  NavBar.tsx  Providers.tsx  Skeletons.tsx  Sparkline.tsx  StatCard.tsx  TeamTrendChart.tsx
apps/web/components/ui/: badge.tsx
apps/web/lib/: api.ts  hooks.ts  queryKeys.ts
infra/: docker-compose.yml
(+241 files in other folders)
